test/asm/uninit01.err
Error: uninit01.asm: 6: ORG is not allowed in uninitialised segments:
    ORG 80h
    ^
Errors: 1
